unpackaged/main/default/objects/Agent_purchase_prime_Credit__e/Agent_purchase_prime_Credit__e.object-meta.xml
<CustomObject>
    <label>Agent purchase prime Credit</label>
    <pluralLabel>Agent purchase prime Credits</pluralLabel>
</CustomObject>