unpackaged/main/default/objects/Agent_purchase_prime_Credit__e/fields/AgentNet_ID__c.field-meta.xml
<CustomField>
    <fullName>AgentNet_ID__c</fullName>
    <label>AgentNet ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>