unpackaged/main/default/objects/Agent_purchase_prime_Credit__e/fields/CampaignID__c.field-meta.xml
<CustomField>
    <fullName>CampaignID__c</fullName>
    <defaultValue>$Label.PCSSCampaignID</defaultValue>
    <label>CampaignID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>