unpackaged/main/default/objects/Agent_purchase_prime_Credit__e/fields/Purchase_Time__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Time__c</fullName>
    <label>Purchase Time</label>
    <type>DateTime</type>
</CustomField>