unpackaged/main/default/objects/Agent_purchase_prime_Credit__e/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <defaultValue>&#39;SGD50% off first PC purchase&#39;</defaultValue>
    <label>sku</label>
    <length>255</length>
    <type>Text</type>
</CustomField>