unpackaged/main/default/objects/Agent_purchase_prime_Credit__e/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <label>UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>